--- a/package.json
+++ b/package.json
@@ -1,20 +1,33 @@
 {
-  "name": "orinoco-backend",
+  "name": "orinoco",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is the back end server for Project 5 of the Junior Web Developer path.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sass": "sass --watch ./sass/main.scss:./css/style.css",
+    "sassMini": "sass --watch ./sass/main.scss:./public/style.css --style compressed",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "",
+  "author": "Elodie PELOILLE",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.8",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.5.2",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.8",
     "mongoose-unique-validator": "^2.0.2",
     "uuid": "^3.3.2"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HeloOwWeb/P5.git"
+  },
+  "bugs": {
+    "url": "https://github.com/HeloOwWeb/P5/issues"
+  },
+  "homepage": "https://github.com/HeloOwWeb/P5#readme"
 }
